--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "expo": "~47.0.12",
@@ -21,6 +23,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-simple-time-picker": "^1.3.11",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "eslint": "^8.33.0",
     "eslint-config-universe": "^11.1.1",
     "prettier": "^2.8.3",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
   },
   "eslintConfig": {
