--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.11",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.3",
@@ -17,9 +17,10 @@
     "expo": "~47.0.12",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
+    "formik": "^2.2.9",
     "native-base": "^3.4.25",
     "react": "18.1.0",
-    "react-hook-form": "^7.43.2",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
@@ -39,6 +40,7 @@
     "eslint": "^8.33.0",
     "eslint-config-universe": "^11.1.1",
     "prettier": "^2.8.3",
+    "react-native-dotenv": "^3.4.8",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
   },
